Prevent markdown images from going off screen

--- a/src/App.global.less
+++ b/src/App.global.less
@@ -213,4 +213,8 @@ code {
   ol li {
     line-height: 1.5;
   }
+
+  img {
+    max-width: 100%;
+  }
 }
